# reqres_rest_api_tests

./: .env  .gitignore  pyproject.toml
schemas/: login_schema.py  single_user_schema.py
tests/: conftest.py  test_login_api.py  test_users_api.py
tests/demoshop/: test_demoshop.py
