[tool.poetry]
name = "reqres-in-rest-api-tests"
version = "0.1.0"
description = ""
authors = ["Sterphius <malyshff@gmail.com>"]
readme = "README.md"
packages = [{include = "reqres-in-rest-api-tests"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.1.3"
requests = "^2.28.2"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
allure-pytest = "^2.13.0"
selene = {version = "2.0.0-beta.15", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"